syntax = "proto3";
option go_package = "module github.com/snooyen/animal-facts/factpublisher/pb";

service Facts {
    rpc PublishFact(PublishRequest) returns (PublishReply);
}

message PublishRequest {
    string Animal = 1;
}

message PublishReply {
    string Fact = 1;
    int64 ID = 2;
    string Err = 3;
}
